# RAG-Library

./: README.md  pyproject.toml
examples/: config_quickstart.py  pipeline_config.json  quickstart.py
src/rag_qdrant/: __init__.py  exceptions.py  pipeline.py
src/rag_qdrant/chunking/: base.py  factory.py  fixed_size.py  recursive.py  semantic.py
src/rag_qdrant/embeddings/: base.py  cohere.py  factory.py  local.py  openai.py
src/rag_qdrant/interfaces/: __init__.py  config.py  schemas.py
src/rag_qdrant/loaders/: base.py  pdf.py  text.py  web.py
src/rag_qdrant/retrieval/: hybrid.py  reranker.py  retriever.py
src/rag_qdrant/vectorstore/: base.py  factory.py  indexing.py  qdrant.py
tests/integration/: test_qdrant_integration.py
tests/unit/: test_rag.py
