[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-qdrant"
version = "0.1.0"
description = "A modular and extensible RAG library using Qdrant as vector store"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "qdrant-client>=1.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
cohere = ["cohere>=5.0.0"]
local = ["sentence-transformers>=2.2.0"]
pdf = ["pypdf>=3.0.0"]
web = ["httpx>=0.24.0", "beautifulsoup4>=4.12.0"]
all = [
    "openai>=1.0.0",
    "cohere>=5.0.0",
    "sentence-transformers>=2.2.0",
    "pypdf>=3.0.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag_qdrant"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "RET", "SIM", "ARG"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
